# fastapi_audio_server

./: .gitignore  Docker-compose.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: app_config.py  logger.py
app/database/: database_helper.py
app/models/: users.py
app/repositories/: audio_db_repo.py  auth_router_repo.py  upload_audio_repo.py  users_db_repo.py
app/routers/: admin_router.py  audio_router.py  auth_routeer.py  auth_router.py  users_router.py
app/schemas/: response_schemas.py  schemas.py
app/tests/: test_examples.py
